monitoring/prod/ntfy/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args: ["serve"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: monitoring
spec:
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
