monitoring/prod/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ntfy.home.t12.io
      secretName: ntfy-tls
  rules:
    - host: ntfy.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
